codes/2024/16-Third-NJU-100-33-51 (C++)/parser/SysYParserParser.cpp

// Generated from ./parser/SysYParser.g4 by ANTLR 4.12.0


#include "SysYParserListener.h"
#include "SysYParserVisitor.h"

#include "SysYParserParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SysYParserParserStaticData final {
  SysYParserParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SysYParserParserStaticData(const SysYParserParserStaticData&) = delete;
  SysYParserParserStaticData(SysYParserParserStaticData&&) = delete;
  SysYParserParserStaticData& operator=(const SysYParserParserStaticData&) = delete;
  SysYParserParserStaticData& operator=(SysYParserParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sysyparserParserOnceFlag;
SysYParserParserStaticData *sysyparserParserStaticData = nullptr;

void sysyparserParserInitialize() {
  assert(sysyparserParserStaticData == nullptr);
  auto staticData = std::make_unique<SysYParserParserStaticData>(
    std::vector<std::string>{
      "program", "compUnit", "decl", "constDecl", "bType", "constDef", "constInitVal", 
      "varDecl", "varDef", "initLVal", "initVal", "funcDef", "funcType", 
      "funcFParams", "funcFParam", "block", "blockItem", "stmt", "exp", 
      "cond", "lVal", "primaryExp", "number", "unaryExp", "unaryOp", "funcRParams", 
      "funcRParam", "mulExp", "addExp", "relExp", "eqExp", "lAndExp", "lOrExp", 
      "constExp", "intConst", "floatConst"
    },
    std::vector<std::string>{
      "", "'const'", "','", "';'", "'int'", "'float'", "'='", "'{'", "'}'", 
      "'['", "']'", "'('", "')'", "'void'", "'if'", "'else'", "'while'", 
      "'break'", "'continue'", "'return'", "'+'", "'-'", "'!'", "'*'", "'/'", 
      "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "Identifier", "DecimalConstant", "OctalConstant", "HexadecimalConstant", 
      "FloatingConstant", "StringLiteral", "Whitespace", "Newline", "BlockComment", 
      "LineComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sysyparserParserStaticData = staticData.release();
}

}

SysYParserParser::SysYParserParser(TokenStream *input) : SysYParserParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SysYParserParser::SysYParserParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SysYParserParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sysyparserParserStaticData->atn, sysyparserParserStaticData->decisionToDFA, sysyparserParserStaticData->sharedContextCache, options);
}

SysYParserParser::~SysYParserParser() {
  delete _interpreter;
}

const atn::ATN& SysYParserParser::getATN() const {
  return *sysyparserParserStaticData->atn;
}

std::string SysYParserParser::getGrammarFileName() const {
  return "SysYParser.g4";
}

const std::vector<std::string>& SysYParserParser::getRuleNames() const {
  return sysyparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& SysYParserParser::getVocabulary() const {
  return sysyparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SysYParserParser::getSerializedATN() const {
  return sysyparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

SysYParserParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParserParser::CompUnitContext* SysYParserParser::ProgramContext::compUnit() {
  return getRuleContext<SysYParserParser::CompUnitContext>(0);
}


size_t SysYParserParser::ProgramContext::getRuleIndex() const {
  return SysYParserParser::RuleProgram;
}

void SysYParserParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void SysYParserParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any SysYParserParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::ProgramContext* SysYParserParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, SysYParserParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    compUnit();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompUnitContext ------------------------------------------------------------------

SysYParserParser::CompUnitContext::CompUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysYParserParser::CompUnitContext::EOF() {
  return getToken(SysYParserParser::EOF, 0);
}

std::vector<SysYParserParser::DeclContext *> SysYParserParser::CompUnitContext::decl() {
  return getRuleContexts<SysYParserParser::DeclContext>();
}

SysYParserParser::DeclContext* SysYParserParser::CompUnitContext::decl(size_t i) {
  return getRuleContext<SysYParserParser::DeclContext>(i);
}

std::vector<SysYParserParser::FuncDefContext *> SysYParserParser::CompUnitContext::funcDef() {
  return getRuleContexts<SysYParserParser::FuncDefContext>();
}

SysYParserParser::FuncDefContext* SysYParserParser::CompUnitContext::funcDef(size_t i) {
  return getRuleContext<SysYParserParser::FuncDefContext>(i);
}


size_t SysYParserParser::CompUnitContext::getRuleIndex() const {
  return SysYParserParser::RuleCompUnit;
}

void SysYParserParser::CompUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompUnit(this);
}

void SysYParserParser::CompUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompUnit(this);
}


std::any SysYParserParser::CompUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitCompUnit(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::CompUnitContext* SysYParserParser::compUnit() {
  CompUnitContext *_localctx = _tracker.createInstance<CompUnitContext>(_ctx, getState());
  enterRule(_localctx, 2, SysYParserParser::RuleCompUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8242) != 0)) {
      setState(76);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(74);
        decl();
        break;
      }

      case 2: {
        setState(75);
        funcDef();
        break;
      }

      default:
        break;
      }
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(SysYParserParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

SysYParserParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParserParser::ConstDeclContext* SysYParserParser::DeclContext::constDecl() {
  return getRuleContext<SysYParserParser::ConstDeclContext>(0);
}

SysYParserParser::VarDeclContext* SysYParserParser::DeclContext::varDecl() {
  return getRuleContext<SysYParserParser::VarDeclContext>(0);
}


size_t SysYParserParser::DeclContext::getRuleIndex() const {
  return SysYParserParser::RuleDecl;
}

void SysYParserParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void SysYParserParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}


std::any SysYParserParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::DeclContext* SysYParserParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 4, SysYParserParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SysYParserParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(83);
        constDecl();
        break;
      }

      case SysYParserParser::T__3:
      case SysYParserParser::T__4: {
        enterOuterAlt(_localctx, 2);
        setState(84);
        varDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDeclContext ------------------------------------------------------------------

SysYParserParser::ConstDeclContext::ConstDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParserParser::BTypeContext* SysYParserParser::ConstDeclContext::bType() {
  return getRuleContext<SysYParserParser::BTypeContext>(0);
}

std::vector<SysYParserParser::ConstDefContext *> SysYParserParser::ConstDeclContext::constDef() {
  return getRuleContexts<SysYParserParser::ConstDefContext>();
}

SysYParserParser::ConstDefContext* SysYParserParser::ConstDeclContext::constDef(size_t i) {
  return getRuleContext<SysYParserParser::ConstDefContext>(i);
}


size_t SysYParserParser::ConstDeclContext::getRuleIndex() const {
  return SysYParserParser::RuleConstDecl;
}

void SysYParserParser::ConstDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDecl(this);
}

void SysYParserParser::ConstDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDecl(this);
}


std::any SysYParserParser::ConstDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitConstDecl(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::ConstDeclContext* SysYParserParser::constDecl() {
  ConstDeclContext *_localctx = _tracker.createInstance<ConstDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, SysYParserParser::RuleConstDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(SysYParserParser::T__0);
    setState(88);
    bType();
    setState(89);
    constDef();
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SysYParserParser::T__1) {
      setState(90);
      match(SysYParserParser::T__1);
      setState(91);
      constDef();
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(97);
    match(SysYParserParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BTypeContext ------------------------------------------------------------------

SysYParserParser::BTypeContext::BTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SysYParserParser::BTypeContext::getRuleIndex() const {
  return SysYParserParser::RuleBType;
}

void SysYParserParser::BTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBType(this);
}

void SysYParserParser::BTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBType(this);
}


std::any SysYParserParser::BTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitBType(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::BTypeContext* SysYParserParser::bType() {
  BTypeContext *_localctx = _tracker.createInstance<BTypeContext>(_ctx, getState());
  enterRule(_localctx, 8, SysYParserParser::RuleBType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    _la = _input->LA(1);
    if (!(_la == SysYParserParser::T__3

    || _la == SysYParserParser::T__4)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDefContext ------------------------------------------------------------------

SysYParserParser::ConstDefContext::ConstDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SysYParserParser::ConstDefContext::getRuleIndex() const {
  return SysYParserParser::RuleConstDef;
}

void SysYParserParser::ConstDefContext::copyFrom(ConstDefContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ConstDefSingleContext ------------------------------------------------------------------

tree::TerminalNode* SysYParserParser::ConstDefSingleContext::Identifier() {
  return getToken(SysYParserParser::Identifier, 0);
}

SysYParserParser::ConstInitValContext* SysYParserParser::ConstDefSingleContext::constInitVal() {
  return getRuleContext<SysYParserParser::ConstInitValContext>(0);
}

SysYParserParser::ConstDefSingleContext::ConstDefSingleContext(ConstDefContext *ctx) { copyFrom(ctx); }

void SysYParserParser::ConstDefSingleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDefSingle(this);
}
void SysYParserParser::ConstDefSingleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDefSingle(this);
}

std::any SysYParserParser::ConstDefSingleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitConstDefSingle(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstDefArrayContext ------------------------------------------------------------------

SysYParserParser::InitLValContext* SysYParserParser::ConstDefArrayContext::initLVal() {
  return getRuleContext<SysYParserParser::InitLValContext>(0);
}

SysYParserParser::ConstInitValContext* SysYParserParser::ConstDefArrayContext::constInitVal() {
  return getRuleContext<SysYParserParser::ConstInitValContext>(0);
}

SysYParserParser::ConstDefArrayContext::ConstDefArrayContext(ConstDefContext *ctx) { copyFrom(ctx); }

void SysYParserParser::ConstDefArrayContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDefArray(this);
}
void SysYParserParser::ConstDefArrayContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDefArray(this);
}

std::any SysYParserParser::ConstDefArrayContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitConstDefArray(this);
  else
    return visitor->visitChildren(this);
}
SysYParserParser::ConstDefContext* SysYParserParser::constDef() {
  ConstDefContext *_localctx = _tracker.createInstance<ConstDefContext>(_ctx, getState());
  enterRule(_localctx, 10, SysYParserParser::RuleConstDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<SysYParserParser::ConstDefSingleContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(101);
      match(SysYParserParser::Identifier);
      setState(102);
      match(SysYParserParser::T__5);
      setState(103);
      constInitVal();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<SysYParserParser::ConstDefArrayContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(104);
      initLVal();
      setState(105);
      match(SysYParserParser::T__5);
      setState(106);
      constInitVal();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstInitValContext ------------------------------------------------------------------

SysYParserParser::ConstInitValContext::ConstInitValContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SysYParserParser::ConstInitValContext::getRuleIndex() const {
  return SysYParserParser::RuleConstInitVal;
}

void SysYParserParser::ConstInitValContext::copyFrom(ConstInitValContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ConstInitValSingleContext ------------------------------------------------------------------

SysYParserParser::ConstExpContext* SysYParserParser::ConstInitValSingleContext::constExp() {
  return getRuleContext<SysYParserParser::ConstExpContext>(0);
}

SysYParserParser::ConstInitValSingleContext::ConstInitValSingleContext(ConstInitValContext *ctx) { copyFrom(ctx); }

void SysYParserParser::ConstInitValSingleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstInitValSingle(this);
}
void SysYParserParser::ConstInitValSingleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstInitValSingle(this);
}

std::any SysYParserParser::ConstInitValSingleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitConstInitValSingle(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstInitValArrayContext ------------------------------------------------------------------

std::vector<SysYParserParser::ConstInitValContext *> SysYParserParser::ConstInitValArrayContext::constInitVal() {
  return getRuleContexts<SysYParserParser::ConstInitValContext>();
}

SysYParserParser::ConstInitValContext* SysYParserParser::ConstInitValArrayContext::constInitVal(size_t i) {
  return getRuleContext<SysYParserParser::ConstInitValContext>(i);
}

SysYParserParser::ConstInitValArrayContext::ConstInitValArrayContext(ConstInitValContext *ctx) { copyFrom(ctx); }

void SysYParserParser::ConstInitValArrayContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstInitValArray(this);
}
void SysYParserParser::ConstInitValArrayContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstInitValArray(this);
}

std::any SysYParserParser::ConstInitValArrayContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitConstInitValArray(this);
  else
    return visitor->visitChildren(this);
}
SysYParserParser::ConstInitValContext* SysYParserParser::constInitVal() {
  ConstInitValContext *_localctx = _tracker.createInstance<ConstInitValContext>(_ctx, getState());
  enterRule(_localctx, 12, SysYParserParser::RuleConstInitVal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SysYParserParser::T__10:
      case SysYParserParser::T__19:
      case SysYParserParser::T__20:
      case SysYParserParser::T__21:
      case SysYParserParser::Identifier:
      case SysYParserParser::DecimalConstant:
      case SysYParserParser::OctalConstant:
      case SysYParserParser::HexadecimalConstant:
      case SysYParserParser::FloatingConstant: {
        _localctx = _tracker.createInstance<SysYParserParser::ConstInitValSingleContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(110);
        constExp();
        break;
      }

      case SysYParserParser::T__6: {
        _localctx = _tracker.createInstance<SysYParserParser::ConstInitValArrayContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(111);
        match(SysYParserParser::T__6);
        setState(120);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 532583286912) != 0)) {
          setState(112);
          constInitVal();
          setState(117);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == SysYParserParser::T__1) {
            setState(113);
            match(SysYParserParser::T__1);
            setState(114);
            constInitVal();
            setState(119);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(122);
        match(SysYParserParser::T__7);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

SysYParserParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParserParser::BTypeContext* SysYParserParser::VarDeclContext::bType() {
  return getRuleContext<SysYParserParser::BTypeContext>(0);
}

std::vector<SysYParserParser::VarDefContext *> SysYParserParser::VarDeclContext::varDef() {
  return getRuleContexts<SysYParserParser::VarDefContext>();
}

SysYParserParser::VarDefContext* SysYParserParser::VarDeclContext::varDef(size_t i) {
  return getRuleContext<SysYParserParser::VarDefContext>(i);
}


size_t SysYParserParser::VarDeclContext::getRuleIndex() const {
  return SysYParserParser::RuleVarDecl;
}

void SysYParserParser::VarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDecl(this);
}

void SysYParserParser::VarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDecl(this);
}


std::any SysYParserParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}
